# DevOps_Eco_Metric

./: .gitignore  Dockerfile  Jenkinsfile  README.md  ci-cd.yml  eco_metric_api_docs.html  make_tree.py  pyproject.toml  requirements.txt  sonar-project.properties
app/: calculator.py  main.py  middleware.py  models.py
app/data/: hardware.json  regions.json
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Calculator.jsx  FactorsList.jsx
frontend/src/services/: api.js
tests/: test_calculator.py  test_routes.py
tests/load/: locustfile.py
